--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <nav class="top-bar" data-topbar>
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#">My Site</a></h1>
+      <h1><a href="#">Djazair hotel</a></h1>
     </li>
      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -22,13 +22,9 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li class="active"><a href="#">Right Button Active</a></li>
-      <li class="has-dropdown">
-        <a href="#">Right Button Dropdown</a>
-        <ul class="dropdown">
-          <li><a href="#">First link in dropdown</a></li>
-        </ul>
-      </li>
+      <li class="active"><a href="#">Accueil</a></li>
+      <li><a href="#">FAQ</a></li>
+      <li><a href="#">Contact-nous</a></li>
     </ul>
 
     <!-- Left Nav Section -->
@@ -37,14 +33,45 @@
     </ul>
   </section>
 </nav>
-<nav class="top-bar second" data-topbar>
-
+<nav class="top-bar second container" data-topbar>
+    <div class="row">
+  <div class="small-2 large-4 columns">...</div>
+  <div class="small-4 large-4 columns">...</div>
+  <div class="small-6 large-4 columns">...</div>
+</div>
+    <br>
+    <div class="container">
+    <div class="row">
+      <div class="large2 columns"></div>
+         <div class="small-10 columns">
+          <div class="row collapse">
+            <div class="small-8 columns">
+              <%= form_tag(hotels_path, :method => "get") do %>
+              <%= text_field_tag :search, params[:search], placeholder: "Recherche d'hôtels" %>
+            </div>
+            <div class="small-2 columns">
+              <%= submit_tag "Search", :name => nil ,class: "button postfix"%>
+              <% end %>
+            </div>
+          </div>
+            <div class="large2 columns">
+              <div class="range-slider round" data-slider>
+                <span class="range-slider-handle" role="slider" tabindex="0"></span>
+                <span class="range-slider-active-segment"></span>
+                <input type="hidden">
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+    </div>
 </nav>
+<hr>
 <div class="row">
 <%= yield %>
 </div>
 <footer>
-  
+
 </footer>
 
 </body>
